--- a/Capitoli/conclusioni.tex
+++ b/Capitoli/conclusioni.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusioni}
-Questo lavoro presenta l’attuale situazione per quanto riguarda la compressione di immagini con metodi tradizionali e che fanno uso di intelligenza artificiale. Nonostante i recenti avanzamenti nell’ambito di ricerca sulle intelligenze artificiali ci sentiamo di affermare che, alla luce degli esperimenti da noi eseguiti, le attuali reti, Ballé et al. \cite{minnen2018joint} e Cheng et al. \cite{cheng2020learned}, funzionano molto bene e potrebbero essere applicate nella vita di tutti i giorni, in quanto raggiungono prestazioni nettamente superiori rispetto ai metodi tradizionali più utilizzati, quali JPEG \cite{125072}, JPEG 2000 \cite{952804} e BPG \cite{BPGImageformat}, a discapito di una compressione più lenta eseguita su CPU, come possiamo vedere dai grafici \ref{fig:times07}, \ref{fig:times16}, \ref{fig:times21}, \ref{fig:times34}.\\
+Questo lavoro presenta l’attuale situazione per quanto riguarda la compressione di immagini con metodi tradizionali e che fanno uso di reti neurali. Dati i recenti avanzamenti nell’ambito di ricerca ci sentiamo di affermare che, alla luce degli esperimenti da noi eseguiti, le attuali reti, Ballé et al. \cite{minnen2018joint} e Cheng et al. \cite{cheng2020learned}, funzionano molto bene e potrebbero essere applicate nella vita di tutti i giorni, in quanto raggiungono prestazioni nettamente superiori rispetto ai metodi tradizionali più utilizzati, quali JPEG \cite{125072}, JPEG 2000 \cite{952804} e BPG \cite{BPGImageformat}, a discapito di una compressione più lenta eseguita su CPU, come possiamo vedere dai grafici \ref{fig:times07}, \ref{fig:times16}, \ref{fig:times21}, \ref{fig:times34}.\\
 In casi specifici, dove è richiesta una qualità di compressione superiore invece, i metodi tradizionali e nello specifico VVC \cite{9503377}, rappresentano ancora l’unica alternativa sensata in quanto permettono di comprimere di più rispetto alle reti, garantendo una migliore qualità oggettiva e soggettiva, come possiamo osservare rispettivamente nei grafici \ref{fig:PSNRGraph} e \ref{fig:LPIPSGraph}.\\
-L’ambito di ricerca della compressione con intelligenze artificiali rimane comunque molto promettente e con la crescente diponibilità di potenza di calcolo e di esempi di addestramento non potrà far altro che continuare a migliorare ulteriormente. Alcune migliorie potrebbero essere oggetto di future ricerche potrebbero essere l’uso di SpectralADAM \cite{balle2018efficient} per l’addestramento delle reti di compressione e l’attenzione nello sviluppo di reti riducibili, come slimCAE \cite{yang2021slimmable} sviluppata dal team di Yang et al. nel 2021, per permettere l’uso di questi metodi anche su dispositivi con ridotta potenza di calcolo.\\
-La naturale prosecuzione di questo lavoro sarebbe la valutazione di metodi che fanno uso di reti neurai per quanto riguarda la codifica video, valutando le prestazioni dei metodi tradizionali attualemente esistenti e comprarli con metodi più recenti che fanno uso di intelligenza artificiale e metodi ibridi.\\
+L’ambito di ricerca della compressione con reti neurali rimane comunque molto promettente e con la crescente diponibilità di potenza di calcolo e di esempi di addestramento non potrà far altro che continuare a migliorare ulteriormente. Alcune migliorie, che potrebbero essere oggetto di future ricerche, potrebbero essere l’uso di SpectralADAM \cite{balle2018efficient} per l’addestramento delle reti di compressione e l’attenzione nello sviluppo di reti riducibili, come slimCAE \cite{yang2021slimmable} sviluppata dal team di Yang et al. nel 2021, per permettere l’uso di questi metodi anche su dispositivi con ridotta potenza di calcolo.\\
+La naturale prosecuzione di questo lavoro sarebbe la valutazione di metodi che fanno uso di reti neurali per quanto riguarda la codifica video, valutando le prestazioni dei metodi tradizionali attualemente esistenti e compararli con metodi più recenti che fanno uso di intelligenza artificiale e metodi ibridi.\\
